# wasm-rtree-cache

./: Cargo.toml  LICENSE_MIT  optimize.sh
example/: .gitignore  index.html  package.json  tsconfig.json
example/src/: index.ts  nominatim.ts
src/: lib.rs  rtree.rs
tests/: web.rs
