[package]
name = "wasm-rtree-cache"
version = "0.2.0"
authors = ["Matheus Cruz <=>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.63"
geo = { version = "0.18.0", features = ["use-serde"] }  
rstar = {version = "0.9.2", features =["serde"]}
serde = "1"
serde_json = "1"
once_cell = "1.10.0"

console_error_panic_hook = { version = "0.1.6" }

wee_alloc = { version = "0.4.5" }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
